@@ -5,9 +5,12 @@ from . import enums
 
 begin_ipu_block = torch.ops.poptorch.begin_ipu_block
 end_ipu_block = torch.ops.poptorch.end_ipu_block
-ipu_print_tensor = torch.ops.poptorch.ipu_print_tensor
 set_available_memory = torch.ops.poptorch.set_available_memory
 nop = torch.ops.popart.nop
+
+
+def ipu_print_tensor(tensor, title=""):
+    return torch.ops.poptorch.ipu_print_tensor(tensor, title)
 
 
 def apply_optimizer(optimizer):
