@@ -13,6 +13,15 @@ def test_print_tensor():
     m(torch.randn(5))
 
 
+def test_print_tensor_with_title():
+    class Model(torch.nn.Module):
+        def forward(self, x):
+            return poptorch.ipu_print_tensor(x, "my_tensor")
+
+    m = poptorch.inferenceModel(Model())
+    m(torch.randn(5))
+
+
 def test_nop():
     class Model(torch.nn.Module):
         def forward(self, x):
